[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/MainMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/menu_opciones.png" type="Texture" id=2]
[ext_resource path="res://scripts/Opciones.gd" type="Script" id=3]
[ext_resource path="res://assets/respuesta_no.png" type="Texture" id=4]

[node name="Opciones" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Background" parent="." index="0"]
texture = ExtResource( 2 )

[node name="OpcionNegada1" type="TextureRect" parent="Background" index="0"]
visible = false
margin_left = 130.0
margin_top = 138.0
margin_right = 186.0
margin_bottom = 152.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpcionNegada2" type="TextureRect" parent="Background" index="1"]
visible = false
margin_left = 130.0
margin_top = 166.0
margin_right = 186.0
margin_bottom = 180.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpcionNegada3" type="TextureRect" parent="Background" index="2"]
visible = false
margin_left = 130.0
margin_top = 194.0
margin_right = 186.0
margin_bottom = 208.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpcionNegada4" type="TextureRect" parent="Background" index="3"]
visible = false
margin_left = 130.0
margin_top = 222.0
margin_right = 186.0
margin_bottom = 236.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpcionNegada5" type="TextureRect" parent="Background" index="4"]
visible = false
margin_left = 130.0
margin_top = 250.0
margin_right = 186.0
margin_bottom = 264.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
